style.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
* {
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "wdth" 100;
}

.playfair-display-400 {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

body {
  margin: 0;
}

a {
  text-decoration: none;
}

.socials-icon {
  width: 50px;
  filter: brightness(0%);
}

.project-card-icon {
  width: 32px;
}

.contact-icon {
  display: none;
  width: 32px;
  filter: invert(); /* invert black -> white */
}

.about-wrapper > .photo-container::before {
  content: "";
  position: absolute;
  top: 0;
  left: -6vw;
  width: 100vw;
  height: 85%;
  background: #0891b3;
  transform: skewY(-24deg);
  transform-origin: top left;
  z-index: -1;
  box-shadow: 1px 1px 7px #1f1f31;
}

.about-wrapper {
  display: block;
  flex-wrap: wrap;
  align-items: center;
  margin: 0 6vw 60px;
}

.about-wrapper > .photo-container {
  display: inline-block;
  position: relative;
  width: 100%;
  padding: 0 3vw;
  /* z-index: 2; */
}

.photo-container > .header-photo {
  display: block;
  width: 100%;
  object-fit: contain;
  margin: 2rem 0;
  box-shadow: 1px 1px 7px #1f1f31;
}

.photo-container > .name {
  color: white;
  position: absolute;
  margin: 0;
  bottom: 36px;
  right: 0;
  left: 6vw;
  text-align: left;
  transform: scaleY(1.1);
  letter-spacing: 2px;
  text-shadow: 0px 2px 3px #5e5e5b;
  font-size: 18vw;
  width: 100%;
}

.about-wrapper > .about-container {
  background: white;
  width: 100%;
  padding: 0;
  box-shadow: none;
}
.spacer {
  display: none;
}
.about-card {
  overflow: auto;
}

.about-card > .description {
  line-height: 2rem;
  font-size: 1.3rem;
}

.about-card > .section-title {
  margin: 10px;
}

.description,
.project-description {
  color: #585858;
}

.about-card > .links-line {
  display: flex;
  justify-content: center;
  gap: 1.6rem;
}

main {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  justify-content: center;
  margin: 0 6vw 200px;
}

.section-title {
  display: block;
  font-size: 3rem;
  margin-bottom: 0;
  text-align: center;
}

.project-title {
  font-size: 1.5rem;
  margin: 0;
}

.projects-wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
}

.project-card {
  width: 100%;
  display: grid;
  place-items: center;
  box-shadow: 1px 1px 7px #1f1f31;
}

.project-card > .screenshot-container {
  width: 100%;
  overflow: hidden;
  border-bottom: 3px solid lightgrey;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project-screenshot {
  height: 300px;
  width: 100%;
  object-fit: contain;
}

.project-card > .details-container {
  padding: 1rem;
  display: grid;
  grid-template-areas:
    "screenshot"
    "title-line"
    "description";
}

.project-card > .details-container > .title-line {
  grid-area: title-line;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.project-card-icon {
  margin-left: 6px;
}

.project-card > .details-container > .project-description {
  grid-area: description;
}

footer {
  background: #0891b3;
  color: white;
}

.contact-wrapper > .photo-container {
  width: 100%;
}

.contact-container {
  overflow: auto;
  margin: 0 6vw;
}

.contact-container > .line {
  display: flex;
  align-items: center;
  gap: 12px;
}

.line > .contact-text {
  margin: 6px 0;
}

.contact-container > .links-line {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 32px;
  margin: 30px 0 100px;
}

h3.contact-text {
  font-size: 1.2rem;
}

p.contact-text {
  font-size: 1rem;
}

.footer-photo {
  display: block;
  width: 100%;
}

/* Tablet size */
@media (min-width: 601px) {
  .about-wrapper {
    margin: 0 1vw 1vh;
    height: 55vh;
  }
  main {
    margin: 0 2vw 1vh;
  }
  .contact-container {
    margin: 0 2vw;
  }
  .section-title {
    font-size: 2.5rem;
  }
  .about-wrapper > .photo-container::before {
    position: absolute;
    top: 0;
    left: -1vw;
    transform: skewY(-16deg);
    height: 100%;
    z-index: -1;
  }
  .about-wrapper > .photo-container {
    background: transparent;
    width: 49vw;
  }
  .photo-container > .name {
    margin: 0;
    bottom: 42vw;
    left: 42vw;
    text-align: right;
    font-size: 7.5vw;
    text-wrap: nowrap;
  }
  .about-wrapper > .about-container {
    display: block;
    background: white;
    position: relative;
    top: -40vw;
    left: 5vw;
    width: 90%;
    padding: 0;
    box-shadow: 1px 1px 7px #1f1f31;
    margin: 0 3vw;
    z-index: -1;
  }
  .spacer {
    display: block;
    width: 38vw;
    height: 34vw;
    float: left;
  }
  .about-card {
    padding: 2vw;
  }
  .about-card > .section-title {
    margin-top: 3rem;
  }
  .about-card > .links-line {
    justify-content: right;
    padding-right: 6vw;
  }
}

/* Desktop size */
@media (min-width: 1201px) {
  .about-wrapper,
  main {
    margin: 0 18vw 1vh; /* TODO: adjust values */
  }
  .contact-container {
    margin: 0 18vw; /* TODO: adjust values */
  }
}

